Bug 151017 - Start Center: Thumbnail filter: description text "Filter:" font color does not adapt dark mode, unreadable
Summary: Start Center: Thumbnail filter: description text "Filter:" font color does no...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All macOS (All)
: medium trivial
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.5.0
Keywords:
Depends on:
Blocks: macOS-Dark-Mode Windows-Dark-Mode
  Show dependency treegraph
 
Reported: 2022-09-17 08:33 UTC by steve
Modified: 2022-09-23 14:40 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
filter text unreadable in dark mode (11.19 KB, image/png)
2022-09-17 08:34 UTC, steve
Details
StartCenter changes on Win10 with Dark color mode (137.81 KB, image/png)
2022-09-17 15:46 UTC, V Stuart Foote
Details
2022-09-23 LO dev main build macos (205.60 KB, image/png)
2022-09-23 14:10 UTC, steve
Details

Note You need to log in before you can comment on or make changes to this bug.
Description steve 2022-09-17 08:33:31 UTC
Description:
Start Center: Thumbnail filter: description text "Filter:" font color does not adapt dark mode, unreadable.

Steps to Reproduce:
Look at Start Center: Thumbnail filter: description text "Filter:" with dark mode enabled (LibreOffice > Settings > Application Colors).

Actual Results:
Black font on dark grey background, no contrast, unreadable.

Expected Results:
White font on dark grey background.


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: a3bbdfab809609bec3475613a918eda699fbdc29
CPU threads: 8; OS: Mac OS X 12.6; UI render: default; VCL: osx
Locale: de-DE (en_DE.UTF-8); UI: en-US
Calc: threaded
Comment 1 steve 2022-09-17 08:34:10 UTC
Created attachment 182516 [details]
filter text unreadable in dark mode
Comment 2 V Stuart Foote 2022-09-17 15:30:35 UTC
Confirmed on Windows 10 in Dark color mode.

However, by using the Tools -> Options -> Application Colors and setting Color Scheme to "LibreOfficeDev Dark" the SC is fully readable.

So seems the os/DE theme details for macOS like WDM provided theme for Windows still require project provided dark theme assistance. 

How is the rest of the UI with and without current elements addressed by Application Colors when the LibreOffice Dark theme is applied?  On Windows it supplements the os/DE provided details nicely, completing the auto detection.
Comment 3 V Stuart Foote 2022-09-17 15:46:01 UTC
Created attachment 182527 [details]
StartCenter changes on Win10 with Dark color mode

the bg color for the toolbar holding the "Filter" list box is not picked up for contrasting fg/bg with default os/DE detection. But the Application Colors "LibreOffice Dark" mode when set accommodates.
Comment 4 V Stuart Foote 2022-09-17 15:49:18 UTC
That was on the 20220917 TB77  nightly with Heiko's https://gerrit.libreoffice.org/c/core/+/139730 for bug 80934

Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: a3bbdfab809609bec3475613a918eda699fbdc29
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded
Comment 5 Heiko Tietze 2022-09-19 07:40:57 UTC
Have you restarted the application?
Comment 6 Caolán McNamara 2022-09-19 08:50:10 UTC
I think this backing window should just be like the usual widgets and track the settings that affect widget colors and not those "application colors" things.

https://gerrit.libreoffice.org/c/core/+/140141
Comment 7 Heiko Tietze 2022-09-19 09:00:38 UTC
(In reply to Caolán McNamara from comment #6)
> I think this backing window should just be like the usual widgets...

The window uses a couple of special colors for some reason - wrong: "used in the past". See also bug 99116 and bug 136555.
Comment 8 Commit Notification 2022-09-19 10:55:24 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/946f67cfc9909ba2f3297a5484b4033fea3701e9

Resolves: tdf#151017 we now want the background to be the stock widget bg

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Caolán McNamara 2022-09-19 10:59:07 UTC
I think the specific problem is solved, maybe there are other aspects. Its always a problem to depart from the norm and customizing colors in widgets.
Comment 10 V Stuart Foote 2022-09-21 16:50:45 UTC
Verified now visible in Win10 Dark color mode

Version: 7.5.0.0.alpha0+ (x86) / LibreOffice Community
Build ID: f0a36babf2ef1384666705697f91e7ff4166f4e4
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 11 steve 2022-09-23 14:10:08 UTC
Created attachment 182644 [details]
2022-09-23 LO dev main build macos

Caolán: thanks for looking into this problem.

With todays main build I am seeing odd results. There is no automatic detection of dark mode on macOS, so Application Colors are the only option sadly. And with those set to LibreOfficeDev Dark, no dark colors whatsoever seem to be applied to StartCenter, so sadly not able to verify on macOS.
Comment 12 Caolán McNamara 2022-09-23 14:38:46 UTC
changing application colors shouldn't really have an effect in the start center as far as I can see, so that it currently doesn't have an effect seems ok to me. If there is some preexisting lack of mac dark mode detection or way to get the system colors I don't think trying to work around it by using application theme is the way to go
Comment 13 steve 2022-09-23 14:40:24 UTC
Valid point, back to verified fixed