Resolves: tdf#151017 we now want the background to be the stock widget bg

Change-Id: I44a800748ffafe91f3b6169617be30ef87919267
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140141
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>